force-app/main/default/objects/Audit_Log__c/fields/Date_str__c.field-meta.xml
<CustomField>
    <fullName>Date_str__c</fullName>
    <label>Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>