force-app/main/default/objects/Audit_Log__c/fields/Delegate_User__c.field-meta.xml
<CustomField>
    <fullName>Delegate_User__c</fullName>
    <label>Delegate User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>