force-app/main/default/objects/Audit_Log__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <externalId>true</externalId>
    <label>Hash</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>