force-app/main/default/objects/Audit_Log__c/fields/Resolution_Actions__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Actions__c</fullName>
    <label>Resolution Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restore component from source control</fullName>
            </value>
            <value>
                <fullName>Capture component to source control</fullName>
            </value>
            <value>
                <fullName>Discuss with Dev</fullName>
            </value>
            <value>
                <fullName>Amend Dev Access</fullName>
            </value>
            <value>
                <fullName>Amend Audit Rules</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>