force-app/main/default/objects/Audit_Log__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Custom Apps</fullName>
            </value>
            <value>
                <fullName>Customize Accounts</fullName>
            </value>
            <value>
                <fullName>Customize Campaigns</fullName>
            </value>
            <value>
                <fullName>Customize Contacts</fullName>
            </value>
            <value>
                <fullName>Customize Leads</fullName>
            </value>
            <value>
                <fullName>Customize Users</fullName>
            </value>
            <value>
                <fullName>Custom Objects</fullName>
            </value>
            <value>
                <fullName>Field Restriction Rule</fullName>
            </value>
            <value>
                <fullName>Flows</fullName>
            </value>
            <value>
                <fullName>Lightning Components</fullName>
            </value>
            <value>
                <fullName>Lightning Pages</fullName>
            </value>
            <value>
                <fullName>Manage Users</fullName>
            </value>
            <value>
                <fullName>Matching Rule</fullName>
            </value>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>Security Controls</fullName>
            </value>
            <value>
                <fullName>Sharing Defaults</fullName>
            </value>
            <value>
                <fullName>Sharing Rules</fullName>
            </value>
            <value>
                <fullName>Static Resource</fullName>
            </value>
            <value>
                <fullName>Track Field History</fullName>
            </value>
            <value>
                <fullName>Workflow Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>