force-app/main/default/objects/Audit_Log__c/fields/Source_Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Source_Namespace_Prefix__c</fullName>
    <label>Source Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>