force-app/main/default/objects/Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_str__c</columns>
    <columns>Org_Name__c</columns>
    <columns>User__c</columns>
    <columns>Section__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Audit Logs</label>
</ListView>