force-app/main/default/objects/Audit_Log__c/listViews/All_Audit_Logs_SIT.listView-meta.xml
<ListView>
    <fullName>All_Audit_Logs_SIT</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Org_Name__c</columns>
    <columns>User__c</columns>
    <columns>Section__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Org_Name__c</field>
        <operation>equals</operation>
        <value>SIT</value>
    </filters>
    <label>All Audit Logs - SIT</label>
</ListView>