force-app/main/default/objects/Audit_Log__c/listViews/Bad_Prod_Audit_Logs.listView-meta.xml
<ListView>
    <fullName>Bad_Prod_Audit_Logs</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>User__c</columns>
    <columns>Section__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Bad</value>
    </filters>
    <filters>
        <field>Org_Name__c</field>
        <operation>equals</operation>
        <value>Prod</value>
    </filters>
    <label>Bad Prod Audit Logs</label>
</ListView>