force-app/main/default/objects/Audit_Log__c/listViews/Logged_in_as.listView-meta.xml
<ListView>
    <fullName>Logged_in_as</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Org_Name__c</columns>
    <columns>User__c</columns>
    <columns>Section__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <columns>Delegate_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delegate_User__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Logged In As</label>
</ListView>