force-app/main/default/objects/Audit_Log__c/listViews/New_Audit_Logs.listView-meta.xml
<ListView>
    <fullName>New_Audit_Logs</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Org_Name__c</columns>
    <columns>User__c</columns>
    <columns>Section__c</columns>
    <columns>Action__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Audit Logs</label>
</ListView>